fixing navigation position and h2 alignement

--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,6 @@ img {
 header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
   display: contents;
-  background-color: #30658d;
-  padding: 0;
-  margin: 1rem;
 }
 
 body {
@@ -35,13 +32,7 @@ body {
   padding: 1rem;
 }
 
-.img-banner {
-  grid-area: banner;
-  padding: 1rem;
-}
-
 figure {
-  padding: 1rem 0 0;
   margin: 0;
 }
 
@@ -59,11 +50,11 @@ li, h2 {
   grid-column: 1;
   grid-row: 1;
   align-self: end;
+  margin: 1rem;
 }
 
 li {
   list-style-type: none;
-  color: #fff;
 }
 
 a {
@@ -79,9 +70,9 @@ a {
 ul {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 0;
-  padding: 0;
+  align-items: flex-start;
+  margin: 1rem;
+  padding-right: 1rem;
 }
 
 main {
@@ -94,12 +85,13 @@ main {
 p {
   font-weight: normal;
   padding: 0;
-  margin: 0;
 }
 
 nav {
-  grid-area: banner;
+  grid-column: 2 / -1;
   grid-row: 1;
-  grid-column: 2;
-  padding-top: 1rem;
+}
+
+h2 {
+  margin-top: 1rem;
 }
